theme/mindcrack/assets/stylesheets/style.scss
/* ... */
dl#upcoming-events {
	@extend .dl-horizontal;
	margin-left: 0;
	margin-right: 0;

	hr {
		@include make-col();

		@include make-col-span(12);

		margin-top: 0.5rem;
		padding:0;
	}
	dt {
		@include make-col();
		@include make-col-span(12);
		padding-left:0;
		@extend .cal-month;

		@include media-breakpoint-up(md) {
			@include make-col-span(4);
		}

		@include media-breakpoint-up(lg) {
			@include make-col-span(3);
		}
	}

	dd {
		@include make-col();
		@include make-col-span(12);

		@include media-breakpoint-up(md) {
			@include make-col-span(8);
		}

		@include media-breakpoint-up(lg) {
			@include make-col-span(9);
		}
	}

	dd + dd {
		@include media-breakpoint-up(md) {
			@include make-col-offset(4);
		}

		@include media-breakpoint-up(lg) {
			@include make-col-offset(3);
		}
	}

}

section#hero {
	background-color: $mc-blue-faint;
	padding-top: 2.5rem;
	padding-bottom: 2.5rem;

	.common-links {
		@include make-col();

		.common-links-link {
			display: block;

	    	text-align: center;
			font-family: $headings-font-family;
			text-transform: uppercase;
			font-size: 1.5rem;
			color: $mc-grey-dark;

			@include make-col();
	
			&:hover {
				text-decoration: none;
				.common-link-icon {
					// Won't work on IE, but this isn't strictly 100% necessary
					// using as opposed to image-mask because it's a little more supported
					filter: brightness(1.33);
				}

				color:lighten($mc-grey-dark,11.5%);
			}

			@include media-breakpoint-down(md) {
				font-size: 1.25rem;
			}

			@include media-breakpoint-down(xs) {
				font-size: 1rem;
			}

			.common-link-icon {
				background-size: contain;
				background-repeat: no-repeat;
				background-position: center;
			}

			&.common-link-calendar .common-link-icon {
				background-image: url('../images/icon_calendar.svg');
			}

			&.common-link-members .common-link-icon {
				background-image: url('../images/icon_members.svg');

			}

			&.common-link-store .common-link-icon {
				background-image: url('../images/icon_store.svg');
			}
		}
	}

	.promo {
		@include make-col();

		@include media-breakpoint-up(md) {
			@include make-col-span(9);
		}

		@include media-breakpoint-down(sm) {
			@include make-col-span(12);
		}

		img {
			width: 100%;
		}
	}

	@include media-breakpoint-up(md) {
		.container {
			.row {
				position: relative;
				height:auto;
			}		
		}

		.common-links {
			position: absolute;
			height: 100%;
			@include make-col-span(3);

			.common-links-link {
				height:33.33333%;
				@include make-col-span(12);

				.common-link-icon {
					height: calc(100% - 2.5em);
	 				margin-top: 1rem;
				}

			}
		}

		.promo {
			@include pull-right();
		}
	}

	@include media-breakpoint-up(xl) {
		.common-links .common-links-link .common-link-icon {
			height: calc(100% - 3.5em);
	 		margin-top: 1.5rem;
	 		margin-bottom: 0.5rem;
		}
	}

	@include media-breakpoint-down(sm) {
		.common-links {
			@include make-col-span(12);
			margin-bottom: 1rem;

			.common-links-link {
				@include make-col-span(4);

				.common-link-icon {
					width: 100%;
					height: 10vw;
				}

			}
		}
	}

	.row.no-promo {
		position:static;

		.common-links {
			width: 100%;
			height: auto;
			position: relative;
			margin-bottom: 0;
			@include make-col-span(12);

			.common-links-link {
				@include make-col-span(4);

				.common-link-icon {
					width: 100%;
					height: 10vw;
					max-height: 5rem;
					margin-bottom: 0;
				}
			}
		}
	}

	// SUPER DUPER SMALL
	@media (max-width: 25rem) {
		padding-top: 1rem;
		padding-bottom: 1rem;

		.row .common-links, .row.no-promo .common-links {
			.common-links-link {
				width: 100%;
				text-align: left;
				padding-left: 1rem;

				margin-bottom: 0.5rem;

				&:last-child {
					margin-bottom: 0;
				}

				.common-link-icon {
					vertical-align: middle;
					display: inline-block;
					width:15vw !important;
					height:15vw !important;
					margin-right: 1rem;
				}

				.common-link-name {
					display: inline-block;
				}
			}
		}
	}
}

.about-panel {
	color: $mc-white;
	background-color: $mc-blue;
	@include at2x('../images/about-panel-bg', 'jpg', $dyn_size: cover);
	background-size:cover;
	background-position: center;
	h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
		color: $mc-white;
	}

	a {
		color: white;
		&:hover {
			text-decoration: underline;
		}
	}

	> .container {
		padding-top: 1rem;
		padding-bottom: 0;

		h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
			font-weight: 500;
			font-family: $font-family-sans-serif;
		}

		@include media-breakpoint-up(md) {
			padding-top:2rem;
			padding-bottom:1rem;
		}
	}
}
/* ... */

